--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -6,5 +6,15 @@ jobs:
     first_job:
       runs-on: ubuntu-latest
       steps:
-      - name: HELLO
-        run: echo "Hi"
+      - name: checkout repo
+        uses: actions/checkout@v5
+
+      - name: fist job
+        run: echo "This is my first Job"
+
+      - name: List the file
+        run: ls
+
+      - name: Cat the file
+        run: cat README.md
+        
