--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,10 +10,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: fist job
-        run: |
-            echo "This is my first Job"
-            ls
-            cat README.md
+        run: ./test.sh
 
     #   - name: List the file
     #     run: ls
