--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -10,7 +10,9 @@ jobs:
         uses: actions/checkout@v5
 
       - name: fist job
-        run: ./test.sh
+        run: |
+            chmod +x test.sh
+            ./test.sh
 
     #   - name: List the file
     #     run: ls
